tests/negative/typecheck/inject.orng
fn main() -> Int {
    const T = (a: Int | b: Int)
    const S = (a: Int | b: Char)
    let x:T = S.b(3)
    0
}